<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="50dp"
    android:paddingBottom="10dp"
    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/drawer_navigation_header_image_contentDescription_1"
        android:src="@drawable/profile_photo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drawer_navigation_header_text_view_text_1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/drawer_navigation_header_text_view_text_2"
            android:textColor="@color/black" />
    </LinearLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/drawer_navigation_header_image_contentDescription_2"
        android:src="@drawable/qr_code" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/drawer_navigation_header_image_contentDescription_3"
        android:src="@drawable/ic_keyboard_arrow_right" />

</LinearLayout>